Update to folders

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,9 @@ dmypy.json
 Config.py
 g_key.py
 Non-Relavent Code/World_Weather_Analysis_Practice.ipynb
+Non-Resources/cities.csv
+Non-Resources/Fig1.png
+Non-Resources/Fig2.png
+Non-Resources/Fig3.png
+Non-Resources/Fig4.png
+Non-Resources/Map_Fig1.png
